Widen contact pane to avoid cutting off email

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -2,10 +2,10 @@
   transition: all .25s ease-in;
   position: fixed;
   padding: .5em;
-  right: -17em;
+  right: -19em;
   width: 0;
   height: 5em;
-  width: 16em;
+  width: 18em;
   z-index: 200;
   top: 0;
   box-shadow: 0 0 4em 0 black;
